byobu (5.105) unreleased; urgency=medium

  * usr/share/man/man1/byobu.1:
    - update examples
  * debian/control:
    - pastebinit needs to be in the recommends
  * usr/lib/byobu/swap, usr/share/man/man1/byobu.1:
    - switch swap to black on green, white on green
      was unreadable

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 28 Feb 2016 23:46:26 -0600

byobu (5.104-0ubuntu1) xenial; urgency=medium

  * debian/control:
    - suggest pastebinit, drop w3m

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 28 Feb 2016 23:46:22 -0600

byobu (5.103-0ubuntu1) xenial; urgency=medium

  * usr/bin/Makefile.am, usr/bin/manifest, usr/bin/tmpfsffs,
    usr/share/man/man1/Makefile.am, usr/share/man/man1/manifest.1:
    - added the manifest command
  * debian/control, usr/bin/Makefile.am, usr/bin/purge-old-kernels,
    usr/share/man/man1/Makefile.am, usr/share/man/man1/purge-old-
    kernels.1:
    - move purge-old-kernels over from bikeshed into byobu
  * usr/lib/byobu/include/select-session.py: LP: #1550687
    - make sure input/eval is compatible with both python2 and 3
  * usr/share/byobu/keybindings/f-keys.screen,
    usr/share/byobu/keybindings/f-keys.tmux: LP: #1543903
    - use $EDITOR rather than 'view'
  * usr/lib/byobu/include/icons, usr/lib/byobu/reboot_required,
    usr/share/man/man1/byobu.1:
    - add an indicator for an unattended upgrade in progress

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 28 Feb 2016 23:24:31 -0600

byobu (5.102-0ubuntu1) xenial; urgency=medium

  [ Dustin Kirkland ]
  * usr/share/byobu/keybindings/mouse.tmux.disable,
    usr/share/byobu/keybindings/mouse.tmux.enable: LP: #1514377
    - use tmux 2.1's new 'mouse' option, add some comments,
      support old and new
  * configure.ac, debian/control, NEWS, README, usr/lib/byobu/rcs_cost,
    usr/share/appdata/byobu.appdata.xml, usr/share/man/man1/byobu.1,
    usr/share/man/man1/byobu-config.1, usr/share/man/man1/byobu-ctrl-